# 26_KD-MCP

./: README.md  pyproject.toml
examples/: config.yaml  mcp-client.json
scripts/: install.ps1
src/kd_mcp/: server.py
src/kd_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
