[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kd-mcp"
version = "1.0.0"
description = "Production-oriented MCP server for controlling Windows kd.exe / cdb-style kernel debugging sessions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "kd-mcp contributors"}]
dependencies = [
  "mcp>=1.2.0",
  "PyYAML>=6.0.1",
  "pydantic>=2.7.0"
]

[project.scripts]
kd-mcp = "kd_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
